# GPUTensorProductSmoothers

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang-format-check.yml
apps/: CMakeLists.txt  app_utilities.h  benchmark_mg.cu  biharm.cu  elastic.cu  equation_data.h  heat.cu  poisson.cu  stokes.cu
include/: cuda_constraint.cuh  cuda_fe_evaluation.cuh  cuda_matrix_free.cuh  cuda_matrix_free.template.cuh  cuda_mg_transfer.cuh  cuda_mg_transfer.template.cuh  cuda_tensor_product_kernels.cuh  cuda_vector.cuh  evaluate_kernel.cuh  laplace_operator.cuh  loop_kernel.cuh  patch_base.cuh  patch_base.template.cuh  patch_smoother.cuh  renumber.h  renumbering.h  solver.cuh  tensor_product.h  transfer_internal.h  utilities.cuh
include/TPSS/: TPSS.h  TPSS.templates.h  alignedlinalg.h  block_matrix.h  block_matrix.templates.h  dof_info.h  dof_info.templates.h  fd_evaluation.h  fd_evaluation.templates.h  fe_evaluation_patch.h  generic_functionalities.h  kroneckersvd.h  mapping_info.h  mapping_info.templates.h  matrix_free_connect.h  matrix_free_connect.templates.h  matrix_helper.h  move_to_deal_ii.h  patch_dof_worker.h  patch_dof_worker.templates.h  patch_info.h  patch_info.templates.h  patch_mf_worker.h  patch_transfer.h  patch_transfer.templates.h  patch_worker.h  patch_worker.templates.h  schwarz_smoother_data.h  subdomain_handler.h  subdomain_handler.templates.h  tensor_indices.h  tensor_product_matrix.h  tensor_product_matrix.templates.h  tensors.h  time_info.h  vectorization.h
include/dealii/: cuda_fee.cuh  cuda_mf.cuh  cuda_mf.template.cuh  cuda_tp_kernels.cuh
include/preconditioner/: preconditioner_base.h  schwarz_preconditioner.h  schwarz_preconditioner.templates.h
include/smoother/: schwarz_smoother.h  smoother_base.h  smoother_richardson.h
scripts/: Ax.py  Smoothing.py  calc.py  convergence.py  convergence_table.py  ct_parameter.py.in  double_vs_mixed.py  gputps-setup.sh  post_process.py  postprocess.py  run_exec.sh  time_solution.py  time_to_solution.py  timing_info.py
source/: cuda_mg_transfer.cu  transfer_internal.cc
tests/: CMakeLists.txt  biharm_op.cu  cusparse_vmult.cu  get_1d_matrices.cu  mf_cg_vector.cu  mf_dg.cu  mf_rt.cu  operator_stokes.cu  patch_dofs.cu  tensor_op.cu  test_cuda.cu  test_mpi.cu  test_ncu.cu
tests/test_python/: Makefile  add_kernel.cu  test_add_prebuilt.py
